--- a/src/assets/stylesheets/modules/mantine.module.scss
+++ b/src/assets/stylesheets/modules/mantine.module.scss
@@ -5,4 +5,10 @@
     box-shadow: 0 0 10px black;
     color: var(--text-primary);
   }
+
+  &--modal {
+    &__body {
+      padding-top: 5px;
+    }
+  }
 }
