--- a/src/assets/stylesheets/modules/overlay.module.scss
+++ b/src/assets/stylesheets/modules/overlay.module.scss
@@ -7,3 +7,59 @@
   position: absolute;
   z-index: 1;
 }
+
+.overlay-edit {
+  &__box {
+    border: 2px solid #FFF;
+    box-shadow: 0 0 5px black;
+    cursor: pointer;
+    position: absolute;
+  }
+
+  &__box-resize {
+    background-color: var(--background-toolbar);
+    opacity: 0;
+    position: absolute;
+    transition: opacity 0.15s ease;
+
+    &--active,
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  &__box-right {
+    height: 100%;
+    right: 0;
+    width: 10px;
+  }
+
+  &__box-bottom {
+    bottom: 0;
+    height: 10px;
+    width: 100%;
+  }
+
+  &__box-corner {
+    border-radius: 5px 0;
+    bottom: 0;
+    height: 15px;
+    right: 0;
+    width: 15px;
+  }
+
+  &__canvas {
+    height: 100%;
+    inset: 0;
+    position: absolute;
+    width: 100%;
+  }
+
+  &__point {
+    background-color: var(--text-highlight);
+    border-radius: 100%;
+    height: 5px;
+    position: absolute;
+    width: 5px;
+  }
+}
