--- a/src/assets/stylesheets/modules/overlay.module.scss
+++ b/src/assets/stylesheets/modules/overlay.module.scss
@@ -9,43 +9,52 @@
 }
 
 .overlay-edit {
+  position: absolute;
+
   &__box {
-    border: 2px solid #FFF;
+    align-items: center;
+    border: 3px solid #FFF;
     box-shadow: 0 0 5px black;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
     position: absolute;
-  }
 
-  &__box-resize {
-    background-color: var(--background-toolbar);
-    opacity: 0;
-    position: absolute;
-    transition: opacity 0.15s ease;
+    &--active {
+      .overlay-edit__box-resize--active {
+        opacity: 0.75;
+      }
+    }
 
-    &--active,
-    &:hover {
-      opacity: 0.5;
+    &:not(.overlay-edit__box--active) {
+      &:hover {
+        .overlay-edit__box-resize {
+          opacity: 0.5;
+
+          &--active,
+          &:hover {
+            opacity: 0.75;
+          }
+        }
+      }
     }
   }
 
-  &__box-right {
-    height: 100%;
-    right: 0;
-    width: 10px;
-  }
-
-  &__box-bottom {
+  &__box-resize {
+    background-color: var(--text-highlight-secondary);
+    border: 1px solid white;
+    border-radius: 15px 0 0;
     bottom: 0;
-    height: 10px;
-    width: 100%;
-  }
-
-  &__box-corner {
-    border-radius: 5px 0;
-    bottom: 0;
+    box-shadow: 0 0 5px black;
     height: 15px;
+    max-height: 100%;
+    max-width: 100%;
+    opacity: 0;
+    position: absolute;
     right: 0;
+    transition: opacity 0.15s ease;
     width: 15px;
+    z-index: 10;
   }
 
   &__canvas {
@@ -56,10 +65,11 @@
   }
 
   &__point {
-    background-color: var(--text-highlight);
-    border-radius: 100%;
-    height: 5px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 2px;
+    box-shadow: 0 0 5px black;
+    cursor: pointer;
     position: absolute;
-    width: 5px;
   }
 }
