--- a/src/assets/stylesheets/modules/assets.module.scss
+++ b/src/assets/stylesheets/modules/assets.module.scss
@@ -34,6 +34,7 @@
     height: max-content;
     min-height: 40px;
     padding-inline: 15px;
+    gap: 5px;
   }
 
   &__image-container {
@@ -59,7 +60,6 @@
     font-size: 12px;
     font-weight: 600;
     gap: 10px;
-    margin: 0 20px 0 auto;
 
     svg {
       height: 20px;
@@ -78,18 +78,6 @@
   justify-content: space-between;
   overflow-y: auto;
   padding: 15px;
-
-  &__tag-details {
-    animation: var(--animation-fadein) 0.35s ease;
-    background-color: var(--background-secondary);
-    border-radius: 5px;
-    font-size: 12px;
-    max-width: 800px;
-    overflow-y: auto;
-    padding: 10px;
-    white-space: pre-wrap;
-    width: 100%;
-  }
 }
 
 .asset-tags {
