--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -121,6 +121,17 @@
   &--highlight {
     color: var(--text-highlight);
   }
+
+  &--faded {
+    color: var(--text-tertiary);
+  }
+
+  &--small {
+    max-height: 20px;
+    max-width: 20px;
+    min-height: 20px;
+    min-width: 20px;
+  }
 }
 
 .copy-button {
