--- a/src/assets/stylesheets/modules/shared.module.scss
+++ b/src/assets/stylesheets/modules/shared.module.scss
@@ -217,15 +217,25 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  user-select: none;
 
   &__image {
     width: 200px;
   }
 
+  &__time,
   &__text {
-    font-family: var(--font-monospace);
-    font-size: 14px;
+    font-size: 12px;
+    max-height: 100px;
+    max-width: 200px;
+    overflow-x: hidden;
     text-align: center;
+    text-overflow: ellipsis;
+    white-space: wrap;
+  }
+
+  &__time {
+    font-family: var(--font-monospace);
   }
 }
 
