Simple view ; More composition

--- a/src/assets/stylesheets/modules/timeline.module.scss
+++ b/src/assets/stylesheets/modules/timeline.module.scss
@@ -23,6 +23,18 @@
     overscroll-behavior-y: contain;
     position: relative;
   }
+
+  &--simple {
+    --track-height--thumbnails: 80px;
+
+    .timeline-row {
+      grid-template-columns: 1fr;
+    }
+
+    .timeline-row__label {
+      display: none;
+    }
+  }
 }
 
 .jump-to {
