--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -35,6 +35,8 @@
   --font-monospace: "Chivo Mono", "Courier New", courier, monospace;
   --slider-color: var(--color-highlight);
   --slider-indicator-color: var(--color-highlight-secondary);
+  --slider-notch-color: var(--text-secondary);
+  --slider-notch-color--minor: #555;
   --background-tag: #29292D;
   --background-tag--selected: #2e2e3d;
   --background-tag--hover: #38383d;
