--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -409,7 +409,7 @@
   &__connection {
     background-color: var(--slider-indicator-color);
     height: var(--slider-height);
-    opacity: 0.1;
+    opacity: 0.3;
     position: absolute;
     z-index: 100;
 
@@ -438,14 +438,14 @@
   }
 
   &__mark-notch {
-    background-color: var(--text-tertiary);
-    height: calc(var(--slider-height) / 2);
-    margin-top: calc((-1 * var(--slider-height)) / 2);
+    background-color: var(--slider-notch-color--minor);
+    height: calc(var(--slider-height) / 3);
+    margin-top: calc((-1 * var(--slider-height)) / 3);
     position: absolute;
     width: 1px;
 
     &--major {
-      background-color: var(--text-secondary);
+      background-color: var(--slider-notch-color);
       height: calc(var(--slider-height) / 1.3);
       margin-top: calc((-1 * var(--slider-height)) / 1.3);
     }
