--- a/src/assets/stylesheets/modules/video.module.scss
+++ b/src/assets/stylesheets/modules/video.module.scss
@@ -1,11 +1,16 @@
 /* Video Section */
 .video-section {
+  border: 1px solid transparent;
   display: flex;
   flex-direction: column;
   height: 100%;
   max-height: 100%;
   overflow: hidden;
   width: 100%;
+
+  &--active {
+    border: 1px solid var(--color-highlight-secondary);
+  }
 
   &__title {
     align-items: center;
