--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -200,7 +200,6 @@
 }
 
 .form-input {
-  flex-grow: 1;
   position: relative;
   width: 100%;
 
@@ -217,6 +216,10 @@
 
     &--textarea {
       background-color: var(--background-modal);
+    }
+
+    &--textarea-disabled {
+      background-color: transparent;
     }
   }
 
