--- a/src/assets/stylesheets/modules/download.module.scss
+++ b/src/assets/stylesheets/modules/download.module.scss
@@ -1,5 +1,5 @@
 .download-modal {
-  min-height: 500px;
+  min-height: 450px;
   padding-top: 10px;
 }
 
@@ -10,13 +10,16 @@
    font-size: 20px;
    font-weight: 600;
    gap: 10px;
+   max-width: 100%;
    position: relative;
    width: 100%;
+   word-break: break-all;
+   word-wrap: anywhere;
 
-  svg {
-    height: 20px;
-    width: 20px;
-  }
+   svg {
+     height: 20px;
+     width: 20px;
+   }
  }
 
  .preview {
@@ -62,7 +65,11 @@
      border-radius: 10px;
      font-size: 14px;
      margin-top: 10px;
+     max-height: 300px;
+     overflow-y: auto;
      padding: 10px 15px;
+     text-overflow: ellipsis;
+     white-space: pre-wrap;
    }
  }
 
@@ -71,7 +78,7 @@
   gap: 30px;
   grid-template-columns: 2fr 3fr;
   height: max-content;
-  min-height: 525px;
+  min-height: 450px;
 
   &__error {
     color: #faa;
@@ -79,17 +86,20 @@
   }
 
   &__form {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 20px;
-    margin: 30px 0 10px;
   }
 
   &__actions {
     align-items: center;
+    border-top: 1px solid var(--table-border-color);
     display: flex;
     gap: 10px;
     justify-content: flex-end;
-    margin-top: 20px;
+    margin-top: 30px;
+    padding: 30px 0 15px;
+    width: 100%;
 
     &--loading {
       height: 45px;
@@ -106,6 +116,11 @@
     justify-content: center;
     transition: background-color 0.15s ease, color 0.15s ease;
     width: 150px;
+
+    &--secondary {
+      height: 35px;
+      width: 120px;
+    }
   }
 
   &__message {
@@ -116,9 +131,11 @@
 }
 
 .history {
+  align-content: start;
   display: grid;
   gap: var(--gutter-size-y);
   max-height: 550px;
+  min-height: 550px;
   overflow-y: auto;
   padding: 0 10px 20px 0;
   position: relative;
@@ -138,8 +155,8 @@
   transition: background-color 0.15s ease, color 0.15s ease;
 
   &--highlighted {
-    .download-modal__history-row-name {
-      color: #9fbafd;
+    .history-row__cell--title {
+      color: var(--text-highlight-secondary);
     }
   }
 
@@ -240,5 +257,154 @@
     display: flex;
     gap: 20px;
     justify-content: space-between;
+  }
+}
+
+
+// Sharing
+.share {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: 2fr 3fr;
+  min-height: 450px;
+
+  &__loader {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    min-height: 300px;
+  }
+
+  &__dummy-input {
+    background-color: var(--background-modal);
+    border: 1px solid var(--text-tertiary);
+    border-radius: 5px;
+    height: 50px;
+
+    &::placeholder {
+      color: var(--text-tertiary);
+    }
+  }
+}
+
+.share-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  &__title {
+    align-items: center;
+    display: flex;
+    font-size: 18px;
+    font-weight: 600;
+    gap: 10px;
+  }
+
+  &__actions {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+  }
+}
+
+.recipients {
+  &__list {
+    display: flex;
+    flex-direction: column;
+    max-height: 420px;
+    overflow-y: auto;
+  }
+
+  &__header {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px 0 5px;
+  }
+}
+
+.recipient {
+  align-items: center;
+  cursor: pointer;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 150px 60px;
+  padding: 10px;
+  transition: background-color 0.15s ease, color 0.15s ease;
+
+  &:hover {
+    background-color: var(--background-active);
+  }
+
+  &__email {
+    font-weight: 500;
+  }
+
+  &__clip-info,
+  &__expiration {
+    font-size: 12px;
+  }
+
+  &__expiration {
+    color: var(--text-tertiary);
+  }
+
+  &__permissions {
+    align-items: center;
+    display: flex;
+    font-size: 12px;
+    font-weight: 600;
+    justify-content: flex-end;
+  }
+
+  &__actions {
+    display: flex;
+    gap: 7px;
+    justify-content: flex-end;
+
+    * {
+      color: var(--text-tertiary);
+    }
+  }
+}
+
+.share-details {
+  &__title {
+    align-items: center;
+    display: flex;
+    font-size: 18px;
+    font-weight: 600;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  &__subtitle {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 10px 0;
+  }
+
+  &__details {
+    display: grid;
+    font-size: 14px;
+    gap: 3px;
+    min-width: 250px;
+    padding: 5px;
+  }
+
+  &__detail {
+    display: flex;
+    gap: 20px;
+    white-space: pre-wrap;
+
+    label {
+      color: var(--text-tertiary);
+      min-width: 100px;
+    }
+
+    span {
+      max-height: 120px;
+      overflow-y: auto;
+    }
   }
 }
