--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -62,6 +62,7 @@ body {
   pointer-events: none;
 }
 
+textarea,
 input {
   background: var(--background-input);
   transition: box-shadow 0.25s ease;
