--- a/src/assets/stylesheets/modules/download.module.scss
+++ b/src/assets/stylesheets/modules/download.module.scss
@@ -27,6 +27,7 @@
 
    &__thumbnail-container,
    &__thumbnail {
+     background-color: black;
      border-radius: 10px;
      width: 100%;
 
@@ -284,7 +285,6 @@
   grid-template-columns: 2fr 3fr;
   max-height: 60vh;
   min-height: min(60vh, 550px);
-  overflow: auto;
 
   &__loader {
     align-items: center;
@@ -292,16 +292,17 @@
     justify-content: center;
     min-height: 300px;
   }
+}
 
-  &__dummy-input {
-    background-color: var(--background-modal);
-    border: 1px solid var(--text-tertiary);
-    border-radius: 5px;
-    height: 50px;
+.shares-info {
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
 
-    &::placeholder {
-      color: var(--text-tertiary);
-    }
+  &__actions {
+    align-items: center;
+    display: flex;
+    gap: 15px;
   }
 }
 
@@ -327,7 +328,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    max-height: 450px;
+    max-height: calc(60vh - 80px);
     overflow-y: auto;
     padding: 5px;
   }
@@ -341,10 +342,12 @@
 }
 
 .recipients {
+  max-height: calc(60vh - 130px);
+
   &__list {
     display: flex;
     flex-direction: column;
-    max-height: 420px;
+    max-height: 100%;
     overflow-y: auto;
   }
 
@@ -420,13 +423,22 @@
 }
 
 .share-details {
+  height: 100%;
+  max-height: 100%;
+
+  &__content {
+    max-height: calc(60vh - 50px);
+    overflow-y: auto;
+    padding-bottom: 20px;
+  }
+
   &__title {
     align-items: center;
     display: flex;
     font-size: 18px;
     font-weight: 600;
     gap: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   &__subtitle {
@@ -443,11 +455,22 @@
     padding: 5px;
   }
 
+  &__social-links,
   &__links {
     align-items: center;
     display: flex;
-    gap: 10px;
+    gap: 15px;
     margin-top: 20px;
+  }
+
+  &__social-link {
+    --icon-size: 40px;
+
+    padding: 0;
+
+    &:hover {
+      background-color: transparent!important;
+    }
   }
 
   &__copy {
