--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -5,7 +5,7 @@
   --background-secondary: #1b1b1c;
   --background-active: #323233;
   --background-toolbar: #29292D;
-  --background-toolbar--active: #29292D;
+  --background-toolbar--active: #2C2C2F;
   --background-input: #1e1e1e;
   --background-input--active: #252525;
   --background-track: #000;
