--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -84,7 +84,11 @@
     gap: 15px;
     height: var(--row-height);
     justify-content: flex-start;
+    max-width: 100%;
+    overflow: hidden;
     text-align: left;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     &--header {
       font-weight: 700;
