--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -413,3 +413,56 @@
     box-shadow: 0 0 5px var(--text-tertiary);
   }
 }
+
+
+// Compositions
+
+.composition-clips {
+  overflow-y: auto;
+  padding: 10px;
+
+  &__title {
+    align-items: center;
+    color: var(--text-primary);
+    display: flex;
+    font-size: 18px;
+    font-weight: 500;
+    gap: 10px;
+    margin-bottom: 10px;
+
+    svg {
+      height: 25px;
+      width: 25px;
+    }
+  }
+
+  &__list {
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    padding-bottom: 20px;
+  }
+}
+
+.clip {
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: 5px;
+  transition: opacity 0.25s ease;
+
+  &--active {
+    box-shadow: 0 0 5px var(--text-highlight-secondary);
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &__image {
+    border-radius: 5px;
+  }
+
+  &__name {
+    font-size: 12px;
+  }
+}
