--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -6,6 +6,7 @@
   --background-active: #323233;
   --background-toolbar: #29292D;
   --background-toolbar--active: #2C2C2F;
+  --background-toolbar--highlight: #563e6c;
   --background-input: #1e1e1e;
   --background-input--active: #252525;
   --background-track: #000;
