--- a/src/assets/stylesheets/reset.scss
+++ b/src/assets/stylesheets/reset.scss
@@ -4,7 +4,25 @@
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
     - The "symbol *" part is to solve Firefox SVG sprite bug
  */
-*:where(:not(iframe, canvas, img, svg, input, video, table, thead, th, tbody, tr, td, svg *, symbol *)) {
+*:where(
+  :not(
+    iframe,
+    canvas,
+    img,
+    svg,
+    input,
+    video,
+    table,
+    thead,
+    th,
+    tbody,
+    tr,
+    td,
+    svg *,
+    symbol *,
+    [draggable]
+  )
+) {
   all: unset;
   display: revert;
 }
