Share compositions ; Modify duration determination

--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -469,6 +469,7 @@
 .clip {
   border: 1px solid transparent;
   border-radius: 5px;
+  cursor: pointer;
   padding: 5px;
   transition: opacity 0.25s ease;
 
