--- a/src/assets/stylesheets/modules/video.module.scss
+++ b/src/assets/stylesheets/modules/video.module.scss
@@ -18,13 +18,13 @@
     display: flex;
     gap: 20px;
     height: 45px;
+    justify-content: space-between;
     padding-inline: var(--content-inline-padding);
   }
 
   &__title-actions {
     align-items: center;
     display: flex;
-    flex-grow: 1;
     gap: 10px;
     height: 100%;
     justify-content: flex-end;
