Highlight generation status and regeneration ; Category multiselect

--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -246,6 +246,10 @@
     padding-top: 30px;
   }
 
+  &__multiselect {
+    height: max-content;
+  }
+
   &__color-section {
     bottom: 0;
     height: calc(100% - 20px);
