--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -41,7 +41,7 @@
   --slider-notch-color: var(--text-secondary);
   --slider-notch-color--minor: #555;
   --background-tag: #29292D;
-  --background-tag--selected: #2e2e3d;
+  --background-tag--selected: #383849;
   --background-tag--hover: #38383d;
   --border-asset-tag-selected: #72729a;
   --animation-fadein: fadein;
