--- a/src/assets/stylesheets/modules/assets.module.scss
+++ b/src/assets/stylesheets/modules/assets.module.scss
@@ -74,8 +74,8 @@
 
 .asset-details {
   display: flex;
+  flex-direction: column;
   gap: 10px;
-  justify-content: space-between;
   overflow-y: auto;
   padding: 15px;
 }
@@ -161,6 +161,15 @@
   max-width: 400px;
   padding: 10px 5px;
 
+  &__header {
+    border-top: 1px solid var(--table-border-color);
+    color: var(--text-primary);
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 10px;
+    padding-top: 20px
+  }
+
   &__title,
   &__summary,
   &__hashtags {
@@ -169,9 +178,12 @@
   }
 
   &__title {
-    color: var(--text-primary);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
+  }
+
+  &__summary {
+    font-size: 14px;
   }
 
   &__hashtags {
