--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --color-highlight: #bc77ec;
+  --rgb-color-highlight: 188, 118, 236;
   --color-highlight-secondary: #7787ec;
   --background-primary: #151515;
   --background-secondary: #1b1b1c;
@@ -29,6 +30,7 @@
   --text-primary: #fff;
   --text-secondary: #BDBDBD;
   --text-tertiary: #7b7580;
+  --text-light-bg: #4D4D4D;
   --text-disabled: #4b494e;
   --text-highlight: var(--color-highlight);
   --text-highlight-secondary: var(--color-highlight-secondary);
