--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -36,6 +36,7 @@
   align-items: center;
   display: flex;
   gap: 10px;
+  padding: 10px 10px 5px;
   width: 100%;
 
   &__input {
@@ -44,10 +45,12 @@
 
     & > div,
     input {
-      background-color: var(--background-primary);
-      border-radius: 0;
-      font-size: 20px;
+      background-color: #D7D7D7;
+      border-radius: 20px;
+      color: var(--text-light-bg);
+      font-weight: 500;
       height: 100%;
+      padding-bottom: 1px;
       text-align: left;
     }
 
@@ -56,6 +59,7 @@
 
       &::placeholder {
         font-size: 14px;
+        font-weight: 400;
       }
     }
   }
@@ -67,9 +71,51 @@
     padding: 0 10px 0 5px;
 
     label {
-      color: var(--text-tertiary);
+      color: var(--text-light-bg);
       font-size: 12px;
       white-space: nowrap;
+    }
+  }
+
+  &__toggle-bg {
+    background-color: var(--background-toolbar--highlight);
+
+    input:checked + & {
+      background-color: var(--color-highlight);
+    }
+  }
+
+  &__button {
+    align-items: center;
+    color: var(--text-tertiary);
+    display: flex;
+    height: 20px;
+    justify-content: center;
+    margin-right: 10px;
+    width: 20px;
+  }
+
+  &__index-title {
+    font-weight: 500;
+    padding: 10px;
+  }
+
+  &__index-option {
+    font-size: 14px;
+    height: 40px;
+    padding: 0 10px;
+    text-align: left;
+    transition: background-color 0.15s ease, color 0.15s ease;
+    width: 100%;
+
+    &:hover {
+      &:not(.search__index-option--active) {
+        background-color: var(--background-active);
+      }
+    }
+
+    &--active {
+      background-color: var(--background-toolbar--highlight);
     }
   }
 }
@@ -95,9 +141,19 @@
   user-select: none;
 
   &__placeholder {
+    align-items: center;
     color: var(--text-secondary);
+    display: flex;
     font-size: 12px;
     font-weight: 500;
+    justify-content: space-between;
+    width: 100%;
+
+    svg {
+      color: var(--text-tertiary);
+      height: 15px;
+      width: 15px;
+    }
   }
 
   &__clear {
@@ -446,6 +502,12 @@
   overflow-y: auto;
   padding: 10px;
 
+  &__loader {
+    height: 30px;
+    margin-top: 60px;
+    width: 100%;
+  }
+
   &__title {
     align-items: center;
     color: var(--text-primary);
@@ -464,8 +526,9 @@
   &__list {
     display: grid;
     gap: 5px;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     padding-bottom: 20px;
+    width: 100%;
   }
 
   &__drag-indicator {
@@ -513,10 +576,17 @@
 
   &__image {
     border-radius: 5px;
+    margin-bottom: 5px;
   }
 
   &__name {
     font-size: 12px;
+  }
+
+  &__time {
+    color: var(--text-tertiary);
+    flex-wrap: wrap;
+    font-size: 10px;
   }
 
   &__remove {
