--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -102,7 +102,7 @@
 
   &__index-option {
     font-size: 14px;
-    height: 40px;
+    height: 45px;
     padding: 0 10px;
     text-align: left;
     transition: background-color 0.15s ease, color 0.15s ease;
@@ -117,6 +117,15 @@
     &--active {
       background-color: var(--background-toolbar--highlight);
     }
+  }
+
+  &__index-option-name {
+    color: var(--text-primary);
+  }
+
+  &__index-option-id {
+    color: var(--text-secondary);
+    font-size: 10px;
   }
 }
 
@@ -499,7 +508,7 @@
 
 .composition-clips {
   height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
   padding: 10px;
 
   &__loader {
